@@ -1,5 +1,6 @@
 package com.tinkerpop.pipes;
 
+import com.tinkerpop.pipes.transform.TransformPipe;
 import com.tinkerpop.pipes.util.PipeHelper;
 import com.tinkerpop.pipes.util.iterators.HistoryIterator;
 
@@ -59,8 +60,10 @@ public abstract class AbstractPipe<S, E> implements Pipe<S, E> {
         if (this.pathEnabled) {
             final List pathElements = getPathToHere();
             final int size = pathElements.size();
-            // do not repeat filters as they dup the object
-            if (size == 0 || pathElements.get(size - 1) != this.currentEnd) {
+            if (this instanceof TransformPipe) {
+                pathElements.add(this.currentEnd);
+            } else if (size == 0 || pathElements.get(size - 1) != this.currentEnd) {
+                // do not repeat filters or side-effects as they dup the object
                 pathElements.add(this.currentEnd);
             }
             return pathElements;
