@@ -16,7 +16,7 @@ import com.tinkerpop.pipes.util.FastNoSuchElementException;
  *
  * @author Marko A. Rodriguez (http://markorodriguez.com)
  */
-public class GatherFunctionPipe<S, E> extends AbstractPipe<S, E> {
+public class GatherFunctionPipe<S, E> extends AbstractPipe<S, E> implements TransformPipe {
 
     private List<List> listPaths = new ArrayList<List>();
     private final PipeFunction<List<S>, E> postFilterFunction;
