@@ -1,0 +1,7 @@
+package com.tinkerpop.pipes.transform;
+
+/**
+ * @author Marko A. Rodriguez (http://markorodriguez.com)
+ */
+public interface TransformPipe {
+}
