@@ -18,6 +18,7 @@ h3. Version 2.2.0 (NOT OFFICIALLY RELEASED YET)
 
 * Fixed a comparator bug in @OrderPipe@
 * Garbage collector optimized @CycliePathFilterPipe@ to avoid newing a set each iteration
+* Added @TransformPipe@ interface to denote a transform operation so path joins are ignored
 
 ==<hr/>==
 
